5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_2895.log
== TEST (2019-03-26 10:23:35) 
-- CODE:
unitario=float(input)("Qual o valor unitario do jogo? "))
-- ERROR:
File "XXXX", line 1
    unitario=float(input)("Qual o valor unitario do jogo? "))
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:22) 
-- CODE:
unitario=float(input("Qual o valor unitario do jogo? "))
-- ERROR:
File "XXXX", line 1
    unitario=float(input)("Qual o valor unitario do jogo? "))
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:10) 
-- CODE:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=3
frete=45.0
frete=46.0
frete=47.0
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:18) 
-- CODE:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=3
frete=45.0
frete=46.0
frete=47.0
total=unitario+jogos*frete
print(total)
-- OUTPUT:
153.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:34) 
-- CODE:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=3
frete=45.0
frete=46.0
frete=47.0
total=unitario+jogos*frete
print(total)
-- EXECUTION TIME:
0.140918
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
153.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
151.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
387.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:35) 
-- CODE:
jogos=float(input("Qual a quantidade de jogos"))
unitario=float(input("Qual o valor unitario do jogo? "))
frete=float(input("Qual o valor do frete?"))
preco_total=jogos*unitario+frete
print(preco_total)
-- EXECUTION TIME:
0.118086
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
